# bsout-pricer

./: .gitignore  AGENTS.md  BScout_Cloud_Design_System.md  DESIGN.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  AGENTS.md  pyproject.toml  requirements.txt
backend/src/: config.py  database.py  main.py
backend/src/middleware/: rate_limit.py  subscription_guard.py
backend/src/modules/admin/controller/: __init__.py  admin.py
backend/src/modules/admin/schema/: __init__.py  admin.py
backend/src/modules/admin/service/: __init__.py  admin_service.py
backend/src/modules/auth/controller/: __init__.py  auth.py
backend/src/modules/auth/model/: __init__.py  user.py
backend/src/modules/auth/schema/: __init__.py  auth.py  user.py
backend/src/modules/auth/service/: __init__.py  auth.py
backend/src/modules/cache/service/: __init__.py  redis_cache.py
backend/src/modules/categories/: __init__.py
backend/src/modules/categories/controller/: categories.py
backend/src/modules/categories/model/: __init__.py  category.py
backend/src/modules/categories/schema/: __init__.py  category.py
backend/src/modules/categories/service/: __init__.py  category_service.py
backend/src/modules/health/: __init__.py
backend/src/modules/health/controller/: health.py
backend/src/modules/parser/: __init__.py
backend/src/modules/parser/controller/: __init__.py  parser.py
backend/src/modules/parser/schema/: __init__.py  parser.py
backend/src/modules/parser/service/: __init__.py  (+1 more)
backend/src/modules/shared/: __init__.py  deps.py
(+429 files in other folders)
